# TrustCore

./: Cargo.toml  TrustCore.db
front/: login.html
front/front/: dashboard.html  index.html
front/front/css/: style.css
front/front/js/: register.js
front/js/: dashboard.js  login.js
src/: main.rs
src/singleton/: mod.rs
src/user/: mod.rs
src/web/: mod.rs
