[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "0.10.55", features = ["vendored"] }
rusqlite = "0.31.0"
base64 = "0.22.0"
once_cell = "1.19.0"
dotenvy = "0.15"
crypto-hash = "0.3.4"
rocket = { version = "0.5.1", features = ["json"] }
rocket_cors = "0.6.0"
rand = "0.8.5"